// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toComponentModule Component puts props on <svg> element 1`] = `"<svg viewBox=\\"0 0 18 18\\" width=\\"40\\" height=\\"40\\" data-reactroot=\\"\\" data-reactid=\\"1\\" data-react-checksum=\\"986678207\\"><g style=\\"margin-top:0px;\\" data-reactid=\\"2\\"><path d=\\"M3.4 9.2c.1-1.1.4-2.3 1.5-3.2.9-.7 1.8-.8 2.9-.5 1.4.5 1 .5 2.4 0 1.5-.6 3 0 3.7.8.1.2.2.3 0 .4-1.8 1.3-1.6 3.9.3 5 .2.1.3.2.2.4-.4 1-1 1.9-1.7 2.7-.5.5-1.1.7-1.8.4-.1 0-.3-.1-.4-.1-.9-.1-1.7-.1-2.5.2-.3.1-.5.2-.8.3-.4.1-.8-.1-1.1-.4-.7-.5-1.1-1.2-1.5-1.9-.7-1.1-1.2-2.7-1.2-4.1\\" data-reactid=\\"3\\"></path><path d=\\"M11.6 2.5c0 1.2-1 2.4-2 2.7-.6.1-.8 0-.7-.6.2-1.2 1.2-2.2 2.5-2.5.2 0 .2 0 .2.2v.2\\" data-reactid=\\"4\\"></path></g></svg>"`;

exports[`toComponentModule creates valid React components from a big messy SVG 1`] = `"<svg width=\\"414\\" height=\\"324\\" viewBox=\\"0 0 414 324\\" data-reactroot=\\"\\" data-reactid=\\"1\\" data-react-checksum=\\"82706214\\"><path fill=\\"#FFF\\" d=\\"M.333.333h414v324h-414z\\" data-reactid=\\"2\\"></path><path fill=\\"none\\" d=\\"M152.333 24.298h127.432v109.036H152.333z\\" data-reactid=\\"3\\"></path><switch data-reactid=\\"4\\"><foreignObject requiredExtensions=\\"http://ns.adobe.com/Flows/1.0/\\" x=\\"0\\" y=\\"0\\" width=\\"1\\" height=\\"1\\" overflow=\\"visible\\" data-reactid=\\"5\\"><flowDef xmlns=\\"http://ns.adobe.com/Flows/1.0/\\" data-reactid=\\"6\\"><region data-reactid=\\"7\\"><path fill=\\"none\\" d=\\"M279.765 133.333h-130.49V24.298h130.49v109.035z\\" data-reactid=\\"8\\"></path></region><flow xmlns=\\"http://ns.adobe.com/Flows/1.0/\\" data-reactid=\\"9\\"><p data-reactid=\\"10\\"><span font-family=\\"&#x27;TimesNewRomanPS-BoldMT&#x27;\\" font-size=\\"9\\" data-reactid=\\"11\\">##3$$,</span><span font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"8.894\\" data-reactid=\\"12\\"></span><span font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"7\\" data-reactid=\\"13\\">##2$$</span></p><p data-reactid=\\"14\\"><span font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"8\\" data-reactid=\\"15\\">##1$$,</span><span font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"8.596\\" data-reactid=\\"16\\"></span><span font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"7\\" data-reactid=\\"17\\">##5$$</span></p><p data-reactid=\\"18\\"><span font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"8\\" data-reactid=\\"19\\">##10$$</span></p><p data-reactid=\\"20\\"><span font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"8\\" data-reactid=\\"21\\">##11$$</span></p><p data-reactid=\\"22\\"><span font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"8\\" data-reactid=\\"23\\">##7$$</span></p><p data-reactid=\\"24\\"><span font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"8\\" data-reactid=\\"25\\">##6$$</span></p><p data-reactid=\\"26\\"><span font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"8\\" data-reactid=\\"27\\">##8$$</span></p><p data-reactid=\\"28\\"><span font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"8\\" data-reactid=\\"29\\">##4$$</span></p><p data-reactid=\\"30\\"><span font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"8\\" data-reactid=\\"31\\">##17$$, ##18$$ ##19$$</span></p></flow></flowDef></foreignObject><g data-reactid=\\"32\\"><path fill=\\"none\\" d=\\"M149.275 24.298h130.49v109.036h-130.49z\\" data-reactid=\\"33\\"></path><text transform=\\"translate(235.292 30.48)\\" data-reactid=\\"34\\"><tspan x=\\"0\\" y=\\"0\\" font-family=\\"&#x27;TimesNewRomanPS-BoldMT&#x27;\\" font-size=\\"9\\" data-reactid=\\"35\\">##3$$,</tspan><tspan x=\\"24.75\\" y=\\"0\\" font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"8.894\\" data-reactid=\\"36\\"> </tspan><tspan x=\\"26.974\\" y=\\"0\\" font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"7\\" data-reactid=\\"37\\">##2$$</tspan><tspan x=\\"2.825\\" y=\\"10.314\\" font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"8\\" data-reactid=\\"38\\">##1$$,</tspan><tspan x=\\"24.825\\" y=\\"10.314\\" font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"8.596\\" data-reactid=\\"39\\"> </tspan><tspan x=\\"26.974\\" y=\\"10.314\\" font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"7\\" data-reactid=\\"40\\">##5$$</tspan><tspan x=\\"20.474\\" y=\\"19.915\\" font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"8\\" data-reactid=\\"41\\">##10$$</tspan><tspan x=\\"20.474\\" y=\\"29.515\\" font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"8\\" data-reactid=\\"42\\">##11$$</tspan><tspan x=\\"24.474\\" y=\\"39.115\\" font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"8\\" data-reactid=\\"43\\">##7$$</tspan><tspan x=\\"24.474\\" y=\\"48.715\\" font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"8\\" data-reactid=\\"44\\">##6$$</tspan><tspan x=\\"24.474\\" y=\\"58.314\\" font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"8\\" data-reactid=\\"45\\">##8$$</tspan><tspan x=\\"24.474\\" y=\\"67.915\\" font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"8\\" data-reactid=\\"46\\">##4$$</tspan><tspan x=\\"-33.526\\" y=\\"77.515\\" font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"8\\" data-reactid=\\"47\\">##17$$, ##18$$ ##19$$</tspan></text></g></switch><path fill=\\"#251413\\" d=\\"M288.016 17.766h109.256v87.97H288.016z\\" data-reactid=\\"48\\"></path><path fill=\\"#4C2525\\" d=\\"M46.389 234.756h13.958v13.958H46.389zM46.389 218.081h13.958v13.958H46.389z\\" data-reactid=\\"49\\"></path><g data-reactid=\\"50\\"><path fill=\\"none\\" d=\\"M66.715 220.205h115.852v30.135H66.715z\\" data-reactid=\\"51\\"></path><switch data-reactid=\\"52\\"><foreignObject requiredExtensions=\\"http://ns.adobe.com/Flows/1.0/\\" x=\\"0\\" y=\\"0\\" width=\\"1\\" height=\\"1\\" overflow=\\"visible\\" data-reactid=\\"53\\"><flowDef xmlns=\\"http://ns.adobe.com/Flows/1.0/\\" data-reactid=\\"54\\"><region data-reactid=\\"55\\"><path fill=\\"none\\" d=\\"M190.394 245.59H66.715v-25.385h123.679v25.385z\\" data-reactid=\\"56\\"></path></region><flow xmlns=\\"http://ns.adobe.com/Flows/1.0/\\" font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"5\\" data-reactid=\\"57\\"><p data-reactid=\\"58\\"><span data-reactid=\\"59\\">##25$$</span></p></flow></flowDef></foreignObject><g data-reactid=\\"60\\"><path fill=\\"none\\" d=\\"M66.715 220.205h123.679v25.385H66.715z\\" data-reactid=\\"61\\"></path><text transform=\\"translate(66.715 223.68)\\" font-family=\\"&#x27;TimesNewRomanPSMT&#x27;\\" font-size=\\"5\\" data-reactid=\\"62\\">##25$$</text></g></switch></g></svg>"`;

exports[`toComponentModule creates valid React components from an airplane 1`] = `"<svg viewBox=\\"0 0 18 18\\" data-reactroot=\\"\\" data-reactid=\\"1\\" data-react-checksum=\\"994718638\\"><path d=\\"M7 4l1.6 4H5.5S4.1 6 3 6h-.8L3 8l1 3h4.6L7 15h2l3.2-4H14c1 0 2-.7 2-1.5S15 8 14 8h-1.8L9 4H7z\\" data-reactid=\\"2\\"></path></svg>"`;

exports[`toComponentModule options.defaultProps 1`] = `
"\\"use strict\\";
const React = require(\\"react\\");

class SvgComponent extends React.PureComponent {
  render() {
    return (
      <svg viewBox=\\"0 0 18 18\\" {...this.props}>
        <path d=\\"M7 4l1.6 4H5.5S4.1 6 3 6h-.8L3 8l1 3h4.6L7 15h2l3.2-4H14c1 0 2-.7 2-1.5S15 8 14 8h-1.8L9 4H7z\\" />
      </svg>
    );
  }
}

SvgComponent.defaultProps = {
  role: \\"img\\",
  focusable: \\"false\\"
};

module.exports = SvgComponent;
"
`;

exports[`toComponentModule options.name 1`] = `
"\\"use strict\\";
const React = require(\\"react\\");

class Apple extends React.PureComponent {
  render() {
    return (
      <svg viewBox=\\"0 0 18 18\\" width=\\"30\\" height=\\"30\\" {...this.props}>
        <g
          style={{
            marginTop: \\"0\\"
          }}
        >
          <path d=\\"M3.4 9.2c.1-1.1.4-2.3 1.5-3.2.9-.7 1.8-.8 2.9-.5 1.4.5 1 .5 2.4 0 1.5-.6 3 0 3.7.8.1.2.2.3 0 .4-1.8 1.3-1.6 3.9.3 5 .2.1.3.2.2.4-.4 1-1 1.9-1.7 2.7-.5.5-1.1.7-1.8.4-.1 0-.3-.1-.4-.1-.9-.1-1.7-.1-2.5.2-.3.1-.5.2-.8.3-.4.1-.8-.1-1.1-.4-.7-.5-1.1-1.2-1.5-1.9-.7-1.1-1.2-2.7-1.2-4.1\\" />
          <path d=\\"M11.6 2.5c0 1.2-1 2.4-2 2.7-.6.1-.8 0-.7-.6.2-1.2 1.2-2.2 2.5-2.5.2 0 .2 0 .2.2v.2\\" />
        </g>
      </svg>
    );
  }
}

module.exports = Apple;
"
`;

exports[`toComponentModule options.precompile 1`] = `
"\\"use strict\\";

var _extends =
  Object.assign ||
  function(target) {
    for (var i = 1; i < arguments.length; i++) {
      var source = arguments[i];
      for (var key in source) {
        if (Object.prototype.hasOwnProperty.call(source, key)) {
          target[key] = source[key];
        }
      }
    }
    return target;
  };

var _createClass = (function() {
  function defineProperties(target, props) {
    for (var i = 0; i < props.length; i++) {
      var descriptor = props[i];
      descriptor.enumerable = descriptor.enumerable || false;
      descriptor.configurable = true;
      if (\\"value\\" in descriptor) descriptor.writable = true;
      Object.defineProperty(target, descriptor.key, descriptor);
    }
  }
  return function(Constructor, protoProps, staticProps) {
    if (protoProps) defineProperties(Constructor.prototype, protoProps);
    if (staticProps) defineProperties(Constructor, staticProps);
    return Constructor;
  };
})();

function _classCallCheck(instance, Constructor) {
  if (!(instance instanceof Constructor)) {
    throw new TypeError(\\"Cannot call a class as a function\\");
  }
}

function _possibleConstructorReturn(self, call) {
  if (!self) {
    throw new ReferenceError(
      \\"this hasn't been initialised - super() hasn't been called\\"
    );
  }
  return call && (typeof call === \\"object\\" || typeof call === \\"function\\")
    ? call
    : self;
}

function _inherits(subClass, superClass) {
  if (typeof superClass !== \\"function\\" && superClass !== null) {
    throw new TypeError(
      \\"Super expression must either be null or a function, not \\" +
        typeof superClass
    );
  }
  subClass.prototype = Object.create(superClass && superClass.prototype, {
    constructor: {
      value: subClass,
      enumerable: false,
      writable: true,
      configurable: true
    }
  });
  if (superClass)
    Object.setPrototypeOf
      ? Object.setPrototypeOf(subClass, superClass)
      : (subClass.__proto__ = superClass);
}

var React = require(\\"react\\");

var SvgComponent = (function(_React$PureComponent) {
  _inherits(SvgComponent, _React$PureComponent);

  function SvgComponent() {
    _classCallCheck(this, SvgComponent);

    return _possibleConstructorReturn(
      this,
      (SvgComponent.__proto__ || Object.getPrototypeOf(SvgComponent)).apply(
        this,
        arguments
      )
    );
  }

  _createClass(SvgComponent, [
    {
      key: \\"render\\",
      value: function render() {
        return React.createElement(
          \\"svg\\",
          _extends({ viewBox: \\"0 0 18 18\\" }, this.props),
          React.createElement(\\"path\\", {
            d:
              \\"M7 4l1.6 4H5.5S4.1 6 3 6h-.8L3 8l1 3h4.6L7 15h2l3.2-4H14c1 0 2-.7 2-1.5S15 8 14 8h-1.8L9 4H7z\\"
          })
        );
      }
    }
  ]);

  return SvgComponent;
})(React.PureComponent);

module.exports = SvgComponent;
"
`;

exports[`toComponentModule options.precompile 2`] = `"<svg viewBox=\\"0 0 18 18\\" data-reactroot=\\"\\" data-reactid=\\"1\\" data-react-checksum=\\"994718638\\"><path d=\\"M7 4l1.6 4H5.5S4.1 6 3 6h-.8L3 8l1 3h4.6L7 15h2l3.2-4H14c1 0 2-.7 2-1.5S15 8 14 8h-1.8L9 4H7z\\" data-reactid=\\"2\\"></path></svg>"`;

exports[`toComponentModule options.propTypes 1`] = `
"\\"use strict\\";
const React = require(\\"react\\");
const PropTypes = require(\\"prop-types\\");

class SvgComponent extends React.PureComponent {
  render() {
    return (
      <svg viewBox=\\"0 0 18 18\\" width=\\"30\\" height=\\"30\\" {...this.props}>
        <g
          style={{
            marginTop: \\"0\\"
          }}
        >
          <path d=\\"M3.4 9.2c.1-1.1.4-2.3 1.5-3.2.9-.7 1.8-.8 2.9-.5 1.4.5 1 .5 2.4 0 1.5-.6 3 0 3.7.8.1.2.2.3 0 .4-1.8 1.3-1.6 3.9.3 5 .2.1.3.2.2.4-.4 1-1 1.9-1.7 2.7-.5.5-1.1.7-1.8.4-.1 0-.3-.1-.4-.1-.9-.1-1.7-.1-2.5.2-.3.1-.5.2-.8.3-.4.1-.8-.1-1.1-.4-.7-.5-1.1-1.2-1.5-1.9-.7-1.1-1.2-2.7-1.2-4.1\\" />
          <path d=\\"M11.6 2.5c0 1.2-1 2.4-2 2.7-.6.1-.8 0-.7-.6.2-1.2 1.2-2.2 2.5-2.5.2 0 .2 0 .2.2v.2\\" />
        </g>
      </svg>
    );
  }
}

SvgComponent.propTypes = {
  width: PropTypes.number.isRequired,
  height: PropTypes.number.isRequired
};

module.exports = SvgComponent;
"
`;

exports[`toComponentModule options.template "fancy" 1`] = `
"\\"use strict\\";
const React = require(\\"react\\");
class Fakery extends React.PureComponent {
  render() {
    const containerStyle = {};
    Object.keys(this.props.containerStyle).forEach(key => {
      containerStyle[key] = this.props.containerStyle[key];
    });
    if (!containerStyle.position || containerStyle.position === \\"static\\") {
      containerStyle.position = \\"relative\\";
    }
    containerStyle.paddingBottom = \\"100%\\";

    const svgStyle = {};
    Object.keys(this.props.svgStyle).forEach(key => {
      svgStyle[key] = this.props.svgStyle[key];
    });
    svgStyle.position = \\"absolute\\";
    svgStyle.overflow = \\"hidden\\";
    svgStyle.top = 0;
    svgStyle.left = 0;
    svgStyle.width = \\"100%\\";

    const text = !this.props.alt ? null : (
      <div style={{ position: \\"absolute\\", left: -9999 }}>{this.props.alt}</div>
    );

    return (
      <div style={containerStyle} className={this.props.containerClassName}>
        <svg
          aria-hidden={true}
          focusable=\\"false\\"
          style={svgStyle}
          className={this.props.svgClassName}
          viewBox=\\"0 0 18 18\\"
        >
          <g
            style={{
              marginTop: \\"0\\"
            }}
          >
            <path d=\\"M3.4 9.2c.1-1.1.4-2.3 1.5-3.2.9-.7 1.8-.8 2.9-.5 1.4.5 1 .5 2.4 0 1.5-.6 3 0 3.7.8.1.2.2.3 0 .4-1.8 1.3-1.6 3.9.3 5 .2.1.3.2.2.4-.4 1-1 1.9-1.7 2.7-.5.5-1.1.7-1.8.4-.1 0-.3-.1-.4-.1-.9-.1-1.7-.1-2.5.2-.3.1-.5.2-.8.3-.4.1-.8-.1-1.1-.4-.7-.5-1.1-1.2-1.5-1.9-.7-1.1-1.2-2.7-1.2-4.1\\" />
            <path d=\\"M11.6 2.5c0 1.2-1 2.4-2 2.7-.6.1-.8 0-.7-.6.2-1.2 1.2-2.2 2.5-2.5.2 0 .2 0 .2.2v.2\\" />
          </g>
        </svg>
        {text}
      </div>
    );
  }
}
Fakery.defaultProps = {
  containerStyle: {},
  svgStyle: {}
};
module.exports = Fakery;
"
`;

exports[`toComponentModule options.template "fancy" with svg that could trigger removeViewBox 1`] = `
"\\"use strict\\";
const React = require(\\"react\\");
class Fakery extends React.PureComponent {
  render() {
    const containerStyle = {};
    Object.keys(this.props.containerStyle).forEach(key => {
      containerStyle[key] = this.props.containerStyle[key];
    });
    if (!containerStyle.position || containerStyle.position === \\"static\\") {
      containerStyle.position = \\"relative\\";
    }
    containerStyle.paddingBottom = \\"78.26%\\";

    const svgStyle = {};
    Object.keys(this.props.svgStyle).forEach(key => {
      svgStyle[key] = this.props.svgStyle[key];
    });
    svgStyle.position = \\"absolute\\";
    svgStyle.overflow = \\"hidden\\";
    svgStyle.top = 0;
    svgStyle.left = 0;
    svgStyle.width = \\"100%\\";

    const text = !this.props.alt ? null : (
      <div style={{ position: \\"absolute\\", left: -9999 }}>{this.props.alt}</div>
    );

    return (
      <div style={containerStyle} className={this.props.containerClassName}>
        <svg
          aria-hidden={true}
          focusable=\\"false\\"
          style={svgStyle}
          className={this.props.svgClassName}
          viewBox=\\"0 0 414 324\\"
        >
          <path fill=\\"#FFF\\" d=\\"M.333.333h414v324h-414z\\" />
          <path fill=\\"none\\" d=\\"M152.333 24.298h127.432v109.036H152.333z\\" />
          <switch>
            <foreignObject
              requiredExtensions=\\"http://ns.adobe.com/Flows/1.0/\\"
              x=\\"0\\"
              y=\\"0\\"
              width=\\"1\\"
              height=\\"1\\"
              overflow=\\"visible\\"
            >
              <flowDef xmlns=\\"http://ns.adobe.com/Flows/1.0/\\">
                <region textMatrix=\\"1 0 0 1 0 0\\">
                  <path
                    fill=\\"none\\"
                    d=\\"M279.765 133.333h-130.49V24.298h130.49v109.035z\\"
                  />
                </region>
                <flow xmlns=\\"http://ns.adobe.com/Flows/1.0/\\">
                  <p text-align=\\"right\\" text-align-last=\\"right\\">
                    <span fontFamily=\\"'TimesNewRomanPS-BoldMT'\\" fontSize=\\"9\\">
                      ##3&#x24;&#x24;,
                    </span>
                    <span fontFamily=\\"'TimesNewRomanPSMT'\\" fontSize=\\"8.894\\" />
                    <span fontFamily=\\"'TimesNewRomanPSMT'\\" fontSize=\\"7\\">
                      ##2&#x24;&#x24;
                    </span>
                  </p>
                  <p text-align=\\"right\\" text-align-last=\\"right\\">
                    <span fontFamily=\\"'TimesNewRomanPSMT'\\" fontSize=\\"8\\">
                      ##1&#x24;&#x24;,
                    </span>
                    <span fontFamily=\\"'TimesNewRomanPSMT'\\" fontSize=\\"8.596\\" />
                    <span fontFamily=\\"'TimesNewRomanPSMT'\\" fontSize=\\"7\\">
                      ##5&#x24;&#x24;
                    </span>
                  </p>
                  <p text-align=\\"right\\" text-align-last=\\"right\\">
                    <span fontFamily=\\"'TimesNewRomanPSMT'\\" fontSize=\\"8\\">
                      ##10&#x24;&#x24;
                    </span>
                  </p>
                  <p text-align=\\"right\\" text-align-last=\\"right\\">
                    <span fontFamily=\\"'TimesNewRomanPSMT'\\" fontSize=\\"8\\">
                      ##11&#x24;&#x24;
                    </span>
                  </p>
                  <p text-align=\\"right\\" text-align-last=\\"right\\">
                    <span fontFamily=\\"'TimesNewRomanPSMT'\\" fontSize=\\"8\\">
                      ##7&#x24;&#x24;
                    </span>
                  </p>
                  <p text-align=\\"right\\" text-align-last=\\"right\\">
                    <span fontFamily=\\"'TimesNewRomanPSMT'\\" fontSize=\\"8\\">
                      ##6&#x24;&#x24;
                    </span>
                  </p>
                  <p text-align=\\"right\\" text-align-last=\\"right\\">
                    <span fontFamily=\\"'TimesNewRomanPSMT'\\" fontSize=\\"8\\">
                      ##8&#x24;&#x24;
                    </span>
                  </p>
                  <p text-align=\\"right\\" text-align-last=\\"right\\">
                    <span fontFamily=\\"'TimesNewRomanPSMT'\\" fontSize=\\"8\\">
                      ##4&#x24;&#x24;
                    </span>
                  </p>
                  <p text-align=\\"right\\" text-align-last=\\"right\\">
                    <span fontFamily=\\"'TimesNewRomanPSMT'\\" fontSize=\\"8\\">
                      ##17&#x24;&#x24;, ##18&#x24;&#x24; ##19&#x24;&#x24;
                    </span>
                  </p>
                </flow>
              </flowDef>
            </foreignObject>
            <g>
              <path fill=\\"none\\" d=\\"M149.275 24.298h130.49v109.036h-130.49z\\" />
              <text transform=\\"translate(235.292 30.48)\\">
                <tspan
                  x=\\"0\\"
                  y=\\"0\\"
                  fontFamily=\\"'TimesNewRomanPS-BoldMT'\\"
                  fontSize=\\"9\\"
                >
                  ##3&#x24;&#x24;,
                </tspan>
                <tspan
                  x=\\"24.75\\"
                  y=\\"0\\"
                  fontFamily=\\"'TimesNewRomanPSMT'\\"
                  fontSize=\\"8.894\\"
                >
                  {\\" \\"}
                </tspan>
                <tspan
                  x=\\"26.974\\"
                  y=\\"0\\"
                  fontFamily=\\"'TimesNewRomanPSMT'\\"
                  fontSize=\\"7\\"
                >
                  ##2&#x24;&#x24;
                </tspan>
                <tspan
                  x=\\"2.825\\"
                  y=\\"10.314\\"
                  fontFamily=\\"'TimesNewRomanPSMT'\\"
                  fontSize=\\"8\\"
                >
                  ##1&#x24;&#x24;,
                </tspan>
                <tspan
                  x=\\"24.825\\"
                  y=\\"10.314\\"
                  fontFamily=\\"'TimesNewRomanPSMT'\\"
                  fontSize=\\"8.596\\"
                >
                  {\\" \\"}
                </tspan>
                <tspan
                  x=\\"26.974\\"
                  y=\\"10.314\\"
                  fontFamily=\\"'TimesNewRomanPSMT'\\"
                  fontSize=\\"7\\"
                >
                  ##5&#x24;&#x24;
                </tspan>
                <tspan
                  x=\\"20.474\\"
                  y=\\"19.915\\"
                  fontFamily=\\"'TimesNewRomanPSMT'\\"
                  fontSize=\\"8\\"
                >
                  ##10&#x24;&#x24;
                </tspan>
                <tspan
                  x=\\"20.474\\"
                  y=\\"29.515\\"
                  fontFamily=\\"'TimesNewRomanPSMT'\\"
                  fontSize=\\"8\\"
                >
                  ##11&#x24;&#x24;
                </tspan>
                <tspan
                  x=\\"24.474\\"
                  y=\\"39.115\\"
                  fontFamily=\\"'TimesNewRomanPSMT'\\"
                  fontSize=\\"8\\"
                >
                  ##7&#x24;&#x24;
                </tspan>
                <tspan
                  x=\\"24.474\\"
                  y=\\"48.715\\"
                  fontFamily=\\"'TimesNewRomanPSMT'\\"
                  fontSize=\\"8\\"
                >
                  ##6&#x24;&#x24;
                </tspan>
                <tspan
                  x=\\"24.474\\"
                  y=\\"58.314\\"
                  fontFamily=\\"'TimesNewRomanPSMT'\\"
                  fontSize=\\"8\\"
                >
                  ##8&#x24;&#x24;
                </tspan>
                <tspan
                  x=\\"24.474\\"
                  y=\\"67.915\\"
                  fontFamily=\\"'TimesNewRomanPSMT'\\"
                  fontSize=\\"8\\"
                >
                  ##4&#x24;&#x24;
                </tspan>
                <tspan
                  x=\\"-33.526\\"
                  y=\\"77.515\\"
                  fontFamily=\\"'TimesNewRomanPSMT'\\"
                  fontSize=\\"8\\"
                >
                  ##17&#x24;&#x24;, ##18&#x24;&#x24; ##19&#x24;&#x24;
                </tspan>
              </text>
            </g>
          </switch>
          <path fill=\\"#251413\\" d=\\"M288.016 17.766h109.256v87.97H288.016z\\" />
          <path
            fill=\\"#4C2525\\"
            d=\\"M46.389 234.756h13.958v13.958H46.389zM46.389 218.081h13.958v13.958H46.389z\\"
          />
          <g>
            <path fill=\\"none\\" d=\\"M66.715 220.205h115.852v30.135H66.715z\\" />
            <switch>
              <foreignObject
                requiredExtensions=\\"http://ns.adobe.com/Flows/1.0/\\"
                x=\\"0\\"
                y=\\"0\\"
                width=\\"1\\"
                height=\\"1\\"
                overflow=\\"visible\\"
              >
                <flowDef xmlns=\\"http://ns.adobe.com/Flows/1.0/\\">
                  <region textMatrix=\\"1 0 0 1 0 0\\">
                    <path
                      fill=\\"none\\"
                      d=\\"M190.394 245.59H66.715v-25.385h123.679v25.385z\\"
                    />
                  </region>
                  <flow
                    xmlns=\\"http://ns.adobe.com/Flows/1.0/\\"
                    fontFamily=\\"'TimesNewRomanPSMT'\\"
                    fontSize=\\"5\\"
                  >
                    <p>
                      <span>##25&#x24;&#x24;</span>
                    </p>
                  </flow>
                </flowDef>
              </foreignObject>
              <g>
                <path fill=\\"none\\" d=\\"M66.715 220.205h123.679v25.385H66.715z\\" />
                <text
                  transform=\\"translate(66.715 223.68)\\"
                  fontFamily=\\"'TimesNewRomanPSMT'\\"
                  fontSize=\\"5\\"
                >
                  ##25&#x24;&#x24;
                </text>
              </g>
            </switch>
          </g>
        </svg>
        {text}
      </div>
    );
  }
}
Fakery.defaultProps = {
  containerStyle: {},
  svgStyle: {}
};
module.exports = Fakery;
"
`;

exports[`toComponentModule options.template "fancy" with user-defined removeAttrs plugin 1`] = `
"\\"use strict\\";
const React = require(\\"react\\");
class Fakery extends React.PureComponent {
  render() {
    const containerStyle = {};
    Object.keys(this.props.containerStyle).forEach(key => {
      containerStyle[key] = this.props.containerStyle[key];
    });
    if (!containerStyle.position || containerStyle.position === \\"static\\") {
      containerStyle.position = \\"relative\\";
    }
    containerStyle.paddingBottom = \\"100%\\";

    const svgStyle = {};
    Object.keys(this.props.svgStyle).forEach(key => {
      svgStyle[key] = this.props.svgStyle[key];
    });
    svgStyle.position = \\"absolute\\";
    svgStyle.overflow = \\"hidden\\";
    svgStyle.top = 0;
    svgStyle.left = 0;
    svgStyle.width = \\"100%\\";

    const text = !this.props.alt ? null : (
      <div style={{ position: \\"absolute\\", left: -9999 }}>{this.props.alt}</div>
    );

    return (
      <div style={containerStyle} className={this.props.containerClassName}>
        <svg
          aria-hidden={true}
          focusable=\\"false\\"
          style={svgStyle}
          className={this.props.svgClassName}
          viewBox=\\"0 0 18 18\\"
        >
          <g>
            <path d=\\"M3.4 9.2c.1-1.1.4-2.3 1.5-3.2.9-.7 1.8-.8 2.9-.5 1.4.5 1 .5 2.4 0 1.5-.6 3 0 3.7.8.1.2.2.3 0 .4-1.8 1.3-1.6 3.9.3 5 .2.1.3.2.2.4-.4 1-1 1.9-1.7 2.7-.5.5-1.1.7-1.8.4-.1 0-.3-.1-.4-.1-.9-.1-1.7-.1-2.5.2-.3.1-.5.2-.8.3-.4.1-.8-.1-1.1-.4-.7-.5-1.1-1.2-1.5-1.9-.7-1.1-1.2-2.7-1.2-4.1\\" />
            <path d=\\"M11.6 2.5c0 1.2-1 2.4-2 2.7-.6.1-.8 0-.7-.6.2-1.2 1.2-2.2 2.5-2.5.2 0 .2 0 .2.2v.2\\" />
          </g>
        </svg>
        {text}
      </div>
    );
  }
}
Fakery.defaultProps = {
  containerStyle: {},
  svgStyle: {}
};
module.exports = Fakery;
"
`;

exports[`toComponentModule options.template function 1`] = `
"Fakery;
{
  width: PropTypes.number;
}
<svg viewBox=\\"0 0 18 18\\" width=\\"30\\" height=\\"30\\">
  <g
    style={{
      marginTop: \\"0\\"
    }}
  >
    <path d=\\"M3.4 9.2c.1-1.1.4-2.3 1.5-3.2.9-.7 1.8-.8 2.9-.5 1.4.5 1 .5 2.4 0 1.5-.6 3 0 3.7.8.1.2.2.3 0 .4-1.8 1.3-1.6 3.9.3 5 .2.1.3.2.2.4-.4 1-1 1.9-1.7 2.7-.5.5-1.1.7-1.8.4-.1 0-.3-.1-.4-.1-.9-.1-1.7-.1-2.5.2-.3.1-.5.2-.8.3-.4.1-.8-.1-1.1-.4-.7-.5-1.1-1.2-1.5-1.9-.7-1.1-1.2-2.7-1.2-4.1\\" />
    <path d=\\"M11.6 2.5c0 1.2-1 2.4-2 2.7-.6.1-.8 0-.7-.6.2-1.2 1.2-2.2 2.5-2.5.2 0 .2 0 .2.2v.2\\" />
  </g>
</svg>;
"
`;

exports[`toComponentModule passes SVGO plugins 1`] = `
"\\"use strict\\";
const React = require(\\"react\\");

class SvgComponent extends React.PureComponent {
  render() {
    return (
      <svg viewBox=\\"0 0 18 18\\" {...this.props}>
        <g
          style={{
            marginTop: \\"0\\"
          }}
        >
          <path d=\\"M3.4 9.2c.1-1.1.4-2.3 1.5-3.2.9-.7 1.8-.8 2.9-.5 1.4.5 1 .5 2.4 0 1.5-.6 3 0 3.7.8.1.2.2.3 0 .4-1.8 1.3-1.6 3.9.3 5 .2.1.3.2.2.4-.4 1-1 1.9-1.7 2.7-.5.5-1.1.7-1.8.4-.1 0-.3-.1-.4-.1-.9-.1-1.7-.1-2.5.2-.3.1-.5.2-.8.3-.4.1-.8-.1-1.1-.4-.7-.5-1.1-1.2-1.5-1.9-.7-1.1-1.2-2.7-1.2-4.1\\" />
          <path d=\\"M11.6 2.5c0 1.2-1 2.4-2 2.7-.6.1-.8 0-.7-.6.2-1.2 1.2-2.2 2.5-2.5.2 0 .2 0 .2.2v.2\\" />
        </g>
      </svg>
    );
  }
}

module.exports = SvgComponent;
"
`;

exports[`toComponentModule works with a big one 1`] = `
"\\"use strict\\";
const React = require(\\"react\\");

class SvgComponent extends React.PureComponent {
  render() {
    return (
      <svg width=\\"414\\" height=\\"324\\" viewBox=\\"0 0 414 324\\" {...this.props}>
        <path fill=\\"#FFF\\" d=\\"M.333.333h414v324h-414z\\" />
        <path fill=\\"none\\" d=\\"M152.333 24.298h127.432v109.036H152.333z\\" />
        <switch>
          <foreignObject
            requiredExtensions=\\"http://ns.adobe.com/Flows/1.0/\\"
            x=\\"0\\"
            y=\\"0\\"
            width=\\"1\\"
            height=\\"1\\"
            overflow=\\"visible\\"
          >
            <flowDef xmlns=\\"http://ns.adobe.com/Flows/1.0/\\">
              <region textMatrix=\\"1 0 0 1 0 0\\">
                <path
                  fill=\\"none\\"
                  d=\\"M279.765 133.333h-130.49V24.298h130.49v109.035z\\"
                />
              </region>
              <flow xmlns=\\"http://ns.adobe.com/Flows/1.0/\\">
                <p text-align=\\"right\\" text-align-last=\\"right\\">
                  <span fontFamily=\\"'TimesNewRomanPS-BoldMT'\\" fontSize=\\"9\\">
                    ##3&#x24;&#x24;,
                  </span>
                  <span fontFamily=\\"'TimesNewRomanPSMT'\\" fontSize=\\"8.894\\" />
                  <span fontFamily=\\"'TimesNewRomanPSMT'\\" fontSize=\\"7\\">
                    ##2&#x24;&#x24;
                  </span>
                </p>
                <p text-align=\\"right\\" text-align-last=\\"right\\">
                  <span fontFamily=\\"'TimesNewRomanPSMT'\\" fontSize=\\"8\\">
                    ##1&#x24;&#x24;,
                  </span>
                  <span fontFamily=\\"'TimesNewRomanPSMT'\\" fontSize=\\"8.596\\" />
                  <span fontFamily=\\"'TimesNewRomanPSMT'\\" fontSize=\\"7\\">
                    ##5&#x24;&#x24;
                  </span>
                </p>
                <p text-align=\\"right\\" text-align-last=\\"right\\">
                  <span fontFamily=\\"'TimesNewRomanPSMT'\\" fontSize=\\"8\\">
                    ##10&#x24;&#x24;
                  </span>
                </p>
                <p text-align=\\"right\\" text-align-last=\\"right\\">
                  <span fontFamily=\\"'TimesNewRomanPSMT'\\" fontSize=\\"8\\">
                    ##11&#x24;&#x24;
                  </span>
                </p>
                <p text-align=\\"right\\" text-align-last=\\"right\\">
                  <span fontFamily=\\"'TimesNewRomanPSMT'\\" fontSize=\\"8\\">
                    ##7&#x24;&#x24;
                  </span>
                </p>
                <p text-align=\\"right\\" text-align-last=\\"right\\">
                  <span fontFamily=\\"'TimesNewRomanPSMT'\\" fontSize=\\"8\\">
                    ##6&#x24;&#x24;
                  </span>
                </p>
                <p text-align=\\"right\\" text-align-last=\\"right\\">
                  <span fontFamily=\\"'TimesNewRomanPSMT'\\" fontSize=\\"8\\">
                    ##8&#x24;&#x24;
                  </span>
                </p>
                <p text-align=\\"right\\" text-align-last=\\"right\\">
                  <span fontFamily=\\"'TimesNewRomanPSMT'\\" fontSize=\\"8\\">
                    ##4&#x24;&#x24;
                  </span>
                </p>
                <p text-align=\\"right\\" text-align-last=\\"right\\">
                  <span fontFamily=\\"'TimesNewRomanPSMT'\\" fontSize=\\"8\\">
                    ##17&#x24;&#x24;, ##18&#x24;&#x24; ##19&#x24;&#x24;
                  </span>
                </p>
              </flow>
            </flowDef>
          </foreignObject>
          <g>
            <path fill=\\"none\\" d=\\"M149.275 24.298h130.49v109.036h-130.49z\\" />
            <text transform=\\"translate(235.292 30.48)\\">
              <tspan
                x=\\"0\\"
                y=\\"0\\"
                fontFamily=\\"'TimesNewRomanPS-BoldMT'\\"
                fontSize=\\"9\\"
              >
                ##3&#x24;&#x24;,
              </tspan>
              <tspan
                x=\\"24.75\\"
                y=\\"0\\"
                fontFamily=\\"'TimesNewRomanPSMT'\\"
                fontSize=\\"8.894\\"
              >
                {\\" \\"}
              </tspan>
              <tspan
                x=\\"26.974\\"
                y=\\"0\\"
                fontFamily=\\"'TimesNewRomanPSMT'\\"
                fontSize=\\"7\\"
              >
                ##2&#x24;&#x24;
              </tspan>
              <tspan
                x=\\"2.825\\"
                y=\\"10.314\\"
                fontFamily=\\"'TimesNewRomanPSMT'\\"
                fontSize=\\"8\\"
              >
                ##1&#x24;&#x24;,
              </tspan>
              <tspan
                x=\\"24.825\\"
                y=\\"10.314\\"
                fontFamily=\\"'TimesNewRomanPSMT'\\"
                fontSize=\\"8.596\\"
              >
                {\\" \\"}
              </tspan>
              <tspan
                x=\\"26.974\\"
                y=\\"10.314\\"
                fontFamily=\\"'TimesNewRomanPSMT'\\"
                fontSize=\\"7\\"
              >
                ##5&#x24;&#x24;
              </tspan>
              <tspan
                x=\\"20.474\\"
                y=\\"19.915\\"
                fontFamily=\\"'TimesNewRomanPSMT'\\"
                fontSize=\\"8\\"
              >
                ##10&#x24;&#x24;
              </tspan>
              <tspan
                x=\\"20.474\\"
                y=\\"29.515\\"
                fontFamily=\\"'TimesNewRomanPSMT'\\"
                fontSize=\\"8\\"
              >
                ##11&#x24;&#x24;
              </tspan>
              <tspan
                x=\\"24.474\\"
                y=\\"39.115\\"
                fontFamily=\\"'TimesNewRomanPSMT'\\"
                fontSize=\\"8\\"
              >
                ##7&#x24;&#x24;
              </tspan>
              <tspan
                x=\\"24.474\\"
                y=\\"48.715\\"
                fontFamily=\\"'TimesNewRomanPSMT'\\"
                fontSize=\\"8\\"
              >
                ##6&#x24;&#x24;
              </tspan>
              <tspan
                x=\\"24.474\\"
                y=\\"58.314\\"
                fontFamily=\\"'TimesNewRomanPSMT'\\"
                fontSize=\\"8\\"
              >
                ##8&#x24;&#x24;
              </tspan>
              <tspan
                x=\\"24.474\\"
                y=\\"67.915\\"
                fontFamily=\\"'TimesNewRomanPSMT'\\"
                fontSize=\\"8\\"
              >
                ##4&#x24;&#x24;
              </tspan>
              <tspan
                x=\\"-33.526\\"
                y=\\"77.515\\"
                fontFamily=\\"'TimesNewRomanPSMT'\\"
                fontSize=\\"8\\"
              >
                ##17&#x24;&#x24;, ##18&#x24;&#x24; ##19&#x24;&#x24;
              </tspan>
            </text>
          </g>
        </switch>
        <path fill=\\"#251413\\" d=\\"M288.016 17.766h109.256v87.97H288.016z\\" />
        <path
          fill=\\"#4C2525\\"
          d=\\"M46.389 234.756h13.958v13.958H46.389zM46.389 218.081h13.958v13.958H46.389z\\"
        />
        <g>
          <path fill=\\"none\\" d=\\"M66.715 220.205h115.852v30.135H66.715z\\" />
          <switch>
            <foreignObject
              requiredExtensions=\\"http://ns.adobe.com/Flows/1.0/\\"
              x=\\"0\\"
              y=\\"0\\"
              width=\\"1\\"
              height=\\"1\\"
              overflow=\\"visible\\"
            >
              <flowDef xmlns=\\"http://ns.adobe.com/Flows/1.0/\\">
                <region textMatrix=\\"1 0 0 1 0 0\\">
                  <path
                    fill=\\"none\\"
                    d=\\"M190.394 245.59H66.715v-25.385h123.679v25.385z\\"
                  />
                </region>
                <flow
                  xmlns=\\"http://ns.adobe.com/Flows/1.0/\\"
                  fontFamily=\\"'TimesNewRomanPSMT'\\"
                  fontSize=\\"5\\"
                >
                  <p>
                    <span>##25&#x24;&#x24;</span>
                  </p>
                </flow>
              </flowDef>
            </foreignObject>
            <g>
              <path fill=\\"none\\" d=\\"M66.715 220.205h123.679v25.385H66.715z\\" />
              <text
                transform=\\"translate(66.715 223.68)\\"
                fontFamily=\\"'TimesNewRomanPSMT'\\"
                fontSize=\\"5\\"
              >
                ##25&#x24;&#x24;
              </text>
            </g>
          </switch>
        </g>
      </svg>
    );
  }
}

module.exports = SvgComponent;
"
`;

exports[`toComponentModule works with a template with style attributes 1`] = `
"\\"use strict\\";
const React = require(\\"react\\");

class StyleAttributes extends React.PureComponent {
  render() {
    return (
      <svg
        width=\\"79.4\\"
        height=\\"69.855\\"
        viewBox=\\"0 0 79.4 69.855\\"
        {...this.props}
      >
        <defs>
          <clipPath id=\\"StyleAttributes-a\\" transform=\\"translate(-2.3 -8.8)\\">
            <rect
              x=\\"2.3\\"
              y=\\"24\\"
              width=\\"60\\"
              height=\\"43\\"
              rx=\\"4.5\\"
              ry=\\"4.5\\"
              fill=\\"none\\"
            />
          </clipPath>
        </defs>
        <path
          d=\\"M54.9 28.2l8.3-1.5a1.817 1.817 0 012.1 1.4l5.3 29a1.817 1.817 0 01-1.4 2.1l-8.3 1.5a1.817 1.817 0 01-2.1-1.4l-5.3-29a1.743 1.743 0 011.4-2.1z\\"
          fill=\\"#c5b8ed\\"
        />
        <path
          d=\\"M79.4 36.4L77.6 29a1.8 1.8 0 00-2.1-1.3c-.2 0-.3.1-.5.2l-6.7 3.8-9.1 20.9a3.189 3.189 0 001.6 4.2l5.1 2.3a3.189 3.189 0 004.2-1.6l8.7-20z\\"
          fill=\\"#dad2f9\\"
        />
        <path
          fill=\\"#dad2f9\\"
          d=\\"M60.857 37.259l5.901-1.085.362 1.967-5.901 1.085zM59.96 32.358l5.901-1.085.362 1.967-5.901 1.085z\\"
        />
        <circle
          cx=\\"66.896\\"
          cy=\\"61.496\\"
          r=\\"2.5\\"
          transform=\\"rotate(-10.422 17.502 69.707)\\"
          fill=\\"#dad2f9\\"
        />
        <path
          d=\\"M58.2 48.2h13.6a3.159 3.159 0 013.2 3.2V65a3.159 3.159 0 01-3.2 3.2H58.2A3.159 3.159 0 0155 65V51.4a3.222 3.222 0 013.2-3.2z\\"
          fill=\\"#c5b8ed\\"
        />
        <path fill=\\"#5a39c3\\" d=\\"M21 58.2h19v4H21z\\" />
        <path
          d=\\"M4.5 15.2h51a4.481 4.481 0 014.5 4.5v34a4.481 4.481 0 01-4.5 4.5h-51A4.481 4.481 0 010 53.7v-34a4.481 4.481 0 014.5-4.5z\\"
          fill=\\"#5a39c3\\"
        />
        <path
          d=\\"M22.1 45.9a2.342 2.342 0 01-1.7.7h-5a2.06 2.06 0 00-1.7.7l-3 2.9h49.4V20.1a4.7 4.7 0 00-4.5-4.9H23.5v9.9a2.456 2.456 0 01-2.5 2.4h-3.5a2.523 2.523 0 00-2.5 2.4V34a2.609 2.609 0 00.7 1.7l6.6 6.5a2.357 2.357 0 01.1 3.3l-.1.1z\\"
          fill=\\"#774cef\\"
          opacity=\\".5\\"
          style={{
            isolation: \\"isolate\\"
          }}
        />
        <g clipPath=\\"url(#StyleAttributes-a)\\">
          <path
            fill=\\"none\\"
            stroke=\\"#774cef\\"
            strokeMiterlimit=\\"10\\"
            strokeWidth=\\"2\\"
            d=\\"M53 10.2l-1.2 1.6\\"
          />
        </g>
        <g clipPath=\\"url(#StyleAttributes-a)\\">
          <path
            fill=\\"none\\"
            stroke=\\"#774cef\\"
            strokeMiterlimit=\\"10\\"
            strokeWidth=\\"2\\"
            d=\\"M24.3 67.7L23 69.2\\"
          />
        </g>
        <g clipPath=\\"url(#StyleAttributes-a)\\">
          <path
            fill=\\"none\\"
            stroke=\\"#774cef\\"
            strokeMiterlimit=\\"10\\"
            strokeWidth=\\"2\\"
            d=\\"M66 13.2l-1.2 1.6\\"
          />
        </g>
        <path
          d=\\"M0 50.2h60v3.5a4.481 4.481 0 01-4.5 4.5h-51A4.481 4.481 0 010 53.7v-3.5z\\"
          fill=\\"#774cef\\"
        />
        <circle cx=\\"30.5\\" cy=\\"54.7\\" r=\\"1.5\\" fill=\\"#5a39c3\\" />
        <path fill=\\"#774cef\\" d=\\"M18 62.2h26v6H18z\\" />
        <circle
          cx=\\"21.6\\"
          cy=\\"29.1\\"
          r=\\"5.8\\"
          fill=\\"#c5b8ed\\"
          opacity=\\".5\\"
          style={{
            isolation: \\"isolate\\"
          }}
        />
        <circle
          cx=\\"31.9\\"
          cy=\\"40.5\\"
          r=\\"1.4\\"
          fill=\\"#c5b8ed\\"
          opacity=\\".5\\"
          style={{
            isolation: \\"isolate\\"
          }}
        />
        <circle
          cx=\\"47.8\\"
          cy=\\"31.6\\"
          r=\\"1.4\\"
          fill=\\"#c5b8ed\\"
          opacity=\\".5\\"
          style={{
            isolation: \\"isolate\\"
          }}
        />
        <circle
          cx=\\"31\\"
          cy=\\"24.5\\"
          r=\\"1.4\\"
          fill=\\"#c5b8ed\\"
          opacity=\\".5\\"
          style={{
            isolation: \\"isolate\\"
          }}
        />
        <circle
          cx=\\"21.6\\"
          cy=\\"29.1\\"
          r=\\"3.2\\"
          fill=\\"#dad2f9\\"
          opacity=\\".5\\"
          style={{
            isolation: \\"isolate\\"
          }}
        />
        <circle
          cx=\\"40.5\\"
          cy=\\"42.7\\"
          r=\\"3.5\\"
          fill=\\"#c5b8ed\\"
          opacity=\\".5\\"
          style={{
            isolation: \\"isolate\\"
          }}
        />
        <circle
          cx=\\"40.5\\"
          cy=\\"42.7\\"
          r=\\"1.7\\"
          fill=\\"#dad2f9\\"
          opacity=\\".5\\"
          style={{
            isolation: \\"isolate\\"
          }}
        />
        <path
          fill=\\"#dad2f9\\"
          d=\\"M70.2 13l-1.6 3.2-3.2 1.6 3.2 1.5 1.6 3.3 1.6-3.3 3.2-1.5-3.2-1.6-1.6-3.2zM49.2 0l-1.6 3.2-3.2 1.6 3.2 1.5 1.6 3.3 1.6-3.3L54 4.8l-3.2-1.6L49.2 0z\\"
        />
        <path
          d=\\"M79.4 36.4a4.822 4.822 0 01-3.565-2.513 4.342 4.342 0 00-5.695-2.427 5.918 5.918 0 01-1.87.32l.03-.08 6.7-3.8c.2-.1.3-.2.5-.2a1.8 1.8 0 012.1 1.3z\\"
          fill=\\"#c5b8ed\\"
        />
      </svg>
    );
  }
}

module.exports = StyleAttributes;
"
`;

exports[`toComponentModule works with an airplane 1`] = `
"\\"use strict\\";
const React = require(\\"react\\");

class SvgComponent extends React.PureComponent {
  render() {
    return (
      <svg viewBox=\\"0 0 18 18\\" {...this.props}>
        <path d=\\"M7 4l1.6 4H5.5S4.1 6 3 6h-.8L3 8l1 3h4.6L7 15h2l3.2-4H14c1 0 2-.7 2-1.5S15 8 14 8h-1.8L9 4H7z\\" />
      </svg>
    );
  }
}

module.exports = SvgComponent;
"
`;

exports[`toComponentModule works with an apple 1`] = `
"\\"use strict\\";
const React = require(\\"react\\");

class SvgComponent extends React.PureComponent {
  render() {
    return (
      <svg viewBox=\\"0 0 18 18\\" width=\\"30\\" height=\\"30\\" {...this.props}>
        <g
          style={{
            marginTop: \\"0\\"
          }}
        >
          <path d=\\"M3.4 9.2c.1-1.1.4-2.3 1.5-3.2.9-.7 1.8-.8 2.9-.5 1.4.5 1 .5 2.4 0 1.5-.6 3 0 3.7.8.1.2.2.3 0 .4-1.8 1.3-1.6 3.9.3 5 .2.1.3.2.2.4-.4 1-1 1.9-1.7 2.7-.5.5-1.1.7-1.8.4-.1 0-.3-.1-.4-.1-.9-.1-1.7-.1-2.5.2-.3.1-.5.2-.8.3-.4.1-.8-.1-1.1-.4-.7-.5-1.1-1.2-1.5-1.9-.7-1.1-1.2-2.7-1.2-4.1\\" />
          <path d=\\"M11.6 2.5c0 1.2-1 2.4-2 2.7-.6.1-.8 0-.7-.6.2-1.2 1.2-2.2 2.5-2.5.2 0 .2 0 .2.2v.2\\" />
        </g>
      </svg>
    );
  }
}

module.exports = SvgComponent;
"
`;
